client/k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment 
spec:
  replicas: 3
  selector: 
    matchLabels:
      component: server
  template:
    matadata:
      labels:
        component: server
    spec:
      container:
        - name: server
          image: 12007158/multi-server
          ports:
            -containerPort: 5000
